@@ -11,6 +11,7 @@
         - Allow popups in plugin widgets. (diewald)
         - Set version via KALAMAR_VERSION environment variable.
           (diewald)
+        - Add panel types. (diewald)
 
 0.47 2022-11-22
         - Add command to generate super_client_info file. (diewald)
